aodh (3.0.0~rc1-3) UNRELEASED; urgency=medium

  [ Thomas Goirand ]
  * Removed --namespace oslo.service.service when generating aodh.conf.
  * debian/source/options: ignores egg-info and .gitreview.
  * Fixed EPOCH for oslotest.
  * Build-Depends on openstack-pkg-tools >= 53~.

  [ Ondřej Nový ]
  * d/control: Use correct branch in Vcs-* fields

 -- Thomas Goirand <zigo@debian.org>  Mon, 26 Sep 2016 09:09:28 +0200

aodh (3.0.0~rc1-1) experimental; urgency=medium

  * New upstream release.
  * Add python-zaqarclient as build-depends-indep.

 -- Thomas Goirand <zigo@debian.org>  Mon, 19 Sep 2016 17:14:50 +0200

aodh (3.0.0~b3-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Using OpenStack's Gerrit as VCS URLs.
  * Modified .gitreview to point at Gerrit.
  * Add debian/functions.sh as it's gone upstream.
  * Add -Xusr/etc/aodh/aodh-config-generator.conf in dh_install call.
  * Updated Danish translation of the debconf templates (Closes: #830646).
  * Do not run test_messaging.MessagingTests.test_get_transport_optional,
    which is failing under some OS (Xenial & Jessie arm64).

 -- Thomas Goirand <zigo@debian.org>  Mon, 11 Jul 2016 14:30:47 +0200

aodh (2.0.0-2) unstable; urgency=medium

  [ Ondřej Nový ]
  * Standards-Version is 3.9.8 now (no change)

  [ Thomas Goirand ]
  * Updated Portuguese translation for debconf messages (Closes: #821240).
  * Updated Japanese debconf templates translation (Closes: #820759).
  * Updated Dutch debconf templates translation (Closes: #823253).

 -- Thomas Goirand <zigo@debian.org>  Wed, 18 May 2016 11:25:47 +0200

aodh (2.0.0-1) unstable; urgency=medium

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Thu, 07 Apr 2016 18:37:08 +0200

aodh (2.0.0~rc1-3) unstable; urgency=medium

  * Uplodaing to unstable.
  * Updated ja.po debconf translation (Closes: #819132).

 -- Thomas Goirand <zigo@debian.org>  Tue, 05 Apr 2016 10:56:39 +0200
