@@ -151,6 +151,7 @@ Depends: adduser,
          debconf,
          python-openstackclient,
          q-text-as-data,
+         uwsgi-plugin-python,
          ${misc:Depends},
          ${ostack-lsb-base},
          ${python:Depends},
